[package]
name = "strava-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html8.1
[dependencies]
axum = "0.8.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
chrono = { version = "0.4.40", features = ["serde"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
axum-server = "0.7.2"
